# symmetric_cryptography

./: .gitattributes  .gitignore  Cargo.toml  README.md
entropies/: .gitignore  boloto_processed.txt  boloto_without_spaces.txt  example.txt  example_processed.txt
entropies/report/: report.tex
entropies/src/: entropies  entropies.rs
entropy/: .gitignore  boloto.txt
entropy/report/: report.tex
reports/affine_bigram_sub_analysis/: report.tex
reports/entropy/: entropy.tex  report.tex
reports/geffe/: geffe.tex
reports/vigenere_cipher/: vigenere.tex
src/: .gitignore  affine_bigram_sub_analysis.py  affine_bigram_sub_analysis.rs  decoded.txt  entropy.rs  geffe.rs  kill_geffe.c  main.rs  utils.rs  vigenere_cipher.rs  vigenere_decode.rs  vigenere_encode.rs
text_files/affine_bigram_analysis/: output.txt
text_files/vigenere_cipher/: encoded_2.txt
text_files/vigenere_cipher/to_decode/: input.txt
text_files/vigenere_cipher/to_encode/: encoded_14.txt  encoded_20.txt  encoded_3.txt  encoded_4.txt  encoded_5.txt  input.txt  preprocessed.txt
