[package]
name = "symmetric_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5.1"

[[bin]]
name = "entropy"
path = "src/entropy.rs"

[[bin]]
name = "geffe"
path = "src/geffe.rs"

[[bin]]
name = "vigenere_decode"
path = "src/vigenere_decode.rs"

[[bin]]
name = "vigenere_encode"
path = "src/vigenere_encode.rs"