[package]
name = "symmetric_crypto"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
rayon = "1.5.1"
structopt = "0.3.26"

[[bin]]
name = "entropy"
path = "src/entropy.rs"

[[bin]]
name = "geffe"
path = "src/geffe.rs"

[[bin]]
name = "vigenere_decode"
path = "src/vigenere_decode.rs"

[[bin]]
name = "vigenere_encode"
path = "src/vigenere_encode.rs"